--- a/appsettings.json
+++ b/appsettings.json
@@ -1,22 +1,48 @@
 ﻿{
-    "Logging": {
-        "LogLevel": {
-            "Default": "Debug",
-            "System": "Information",
-            "Microsoft": "Information"
-        }
-    },
     "ConfigData": {
         "CollectorName": "CollectorName",
         "EmailFromAddress": "blackguarder1987@gmail.com",
         "NotifyEmailAddress": "blackguarder1987@gmail.com",
-        "LogFilePath": "D:\\rider_projects\\test_api\\logging\\",
-        "LogFileName": "log_file",
         "SearchDrive": "D",
         "InstantPayCardDataFolder": "D:\\rider_projects\\test_api\\data\\",
         "InstantPayCardArchiveFolder": "D:\\rider_projects\\test_api\\archive\\",
         "InstantAPIBaseUrl": "https://api.test.com/",
         "InstantAPICensusFileUrl": "path/someId/{0}",
-        "InstantPaycardAPIKey": "somekey3000"
+        "InstantPaycardAPIKey": "somekey3000",
+        "InternalLocationId": "aaaaaaa",
+        "FileSizeLimitInBytes": 10485760
+    },
+    "Serilog":{
+        "Using": ["Serilog.Sinks.File", "Serilog.Sinks.Console"],
+        "MinimumLevel": {
+            "Default": "Debug",
+            "Override": {
+                "Microsoft": "Warning",
+                "System": "Warning",
+                "System.Net.Http.HttpClient": "Warning"
+            }
+        },
+        "Enrich": ["FromLogContext"],
+        "WriteTo": [
+            {
+                "Name": "Console",
+                "Args": {
+                    "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Literate, Serilog.Sinks.Console",
+                    "outputTemplate": "[{Timestamp:HH:mm:ss} {Level}] {Message:lj}{NewLine}{Exception}{NewLine}"
+                }
+            },
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "D:\\rider_projects\\test_api\\logging\\ipc_LOGFILE.txt",
+                    "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level}] {Message:lj}{NewLine}{Exception}{NewLine}",
+                    "rollOnFileSizeLimit": true,
+                    "fileSizeLimitBytes": 10485760,
+                    "retainedFileCountLimit": 10,
+                    "shared": true,
+                    "RollingInterval": "Day"
+                }
+            }
+        ]
     }
 }
