add multiply loggers.

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,7 +13,7 @@
         "FileSizeLimitInBytes": 10485760
     },
     "Serilog":{
-        "Using": ["Serilog.Sinks.File", "Serilog.Sinks.Console"],
+        "Using": ["Serilog.Sinks.File", "Serilog.Sinks.Console", "Serilog.Filters.Expressions", "Serilog.Settings.Configuration"],
         "MinimumLevel": {
             "Default": "Debug",
             "Override": {
@@ -32,15 +32,61 @@
                 }
             },
             {
-                "Name": "File",
+                "Name": "Logger",
                 "Args": {
-                    "path": "D:\\rider_projects\\test_api\\logging\\ipc_LOGFILE.txt",
-                    "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level}] {Message:lj}{NewLine}{Exception}{NewLine}",
-                    "rollOnFileSizeLimit": true,
-                    "fileSizeLimitBytes": 10485760,
-                    "retainedFileCountLimit": 10,
-                    "shared": true,
-                    "RollingInterval": "Day"
+                    "configureLogger": {
+                        "Filter": [
+                            {
+                                "Name": "ByIncludingOnly",
+                                "Args": {
+                                    "expression": "(@Level = 'Error' or @Level = 'Fatal' or @Level = 'Warning')"
+                                }
+                            }
+                        ],
+                        "WriteTo": [
+                            {
+                                "Name": "File",
+                                "Args": {
+                                    "path": "D:\\rider_projects\\test_api\\logging\\ipc_LOGFILE_Error_.txt",
+                                    "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level}] {Message:lj}{NewLine}{Exception}{NewLine}",
+                                    "rollOnFileSizeLimit": true,
+                                    "fileSizeLimitBytes": 10485760,
+                                    "retainedFileCountLimit": 10,
+                                    "shared": true,
+                                    "RollingInterval": "Day"
+                                }
+                            }
+                        ]
+                    }
+                }
+            },
+            {
+                "Name": "Logger",
+                "Args": {
+                    "configureLogger": {
+                        "Filter": [
+                            {
+                                "Name": "ByIncludingOnly",
+                                "Args": {
+                                    "expression": "(@Level = 'Information' or @Level = 'Debug')"
+                                }
+                            }
+                        ],
+                        "WriteTo": [
+                            {
+                                "Name": "File",
+                                "Args": {
+                                    "path": "D:\\rider_projects\\test_api\\logging\\ipc_LOGFILE_Info_.txt",
+                                    "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level}] {Message:lj}{NewLine}{Exception}{NewLine}",
+                                    "rollOnFileSizeLimit": true,
+                                    "fileSizeLimitBytes": 10485760,
+                                    "retainedFileCountLimit": 10,
+                                    "shared": true,
+                                    "RollingInterval": "Day"
+                                }
+                            }
+                        ]
+                    }
                 }
             }
         ]
